# keyple-plugin-pcsc-cpp-lib

./: CMakeLists.txt  NOTICE.md  PUBLISHERS.yml  README.md
src/main/: AbstractPcscPluginAdapter.cpp  AbstractPcscReaderAdapter.cpp  AbstractPcscReaderAdapter.h  CMakeLists.txt  PcscPlugin.h  PcscPluginAdapter.cpp  PcscPluginFactory.h  PcscPluginFactoryAdapter.cpp  PcscPluginFactoryAdapter.h  PcscPluginFactoryBuilder.cpp  PcscPluginFactoryBuilder.h  PcscReader.h  PcscReaderAdapter.cpp  PcscSupportedContactProtocol.h  PcscSupportedContactlessProtocol.cpp  PcscSupportedContactlessProtocol.h
src/main/cpp/: CardTerminal.cpp  CardTerminal.h
